update LeetCode Biweekly Contest 154

--- a/algorithm/LeetCode/[Easy] 3375. Minimum Operations to Make Array Values Equal to K.md
+++ b/algorithm/LeetCode/[Easy] 3375. Minimum Operations to Make Array Values Equal to K.md
@@ -57,20 +57,50 @@ The operations can be performed using valid integers in the order 7, 5, 3, and 1
 
 # Submissions
 ---
-**Solution 1: (Set)**
+**Solution 1: (Counter)**
 ```
-Runtime: 14 ms
-Memory: 32.70 MB
+Runtime: 16 ms, Beats 24.53%
+Memory: 31.62 MB, Beats 75.16%
 ```
 ```c++
 class Solution {
 public:
     int minOperations(vector<int>& nums, int k) {
-        set<int> st(nums.begin(), nums.end());
-        if (*st.begin() < k) {
-            return -1;
+        int cnt[101] = {0}, i, a, ans = 0;
+        for (auto &num: nums) {
+            cnt[num] += 1;
         }
-        return st.size()-1 + (*st.begin() != k);
+        for (a = 100; a; a --) {
+            if (cnt[a]) {
+                if (a < k) {
+                    return -1;
+                }
+                ans += a > k;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 2: (Set)**
+```
+Runtime: 14 ms, Beats  37.11%
+Memory: 32.38 MB, Beats 57.55%
+```
+```c++
+class Solution {
+public:
+    int minOperations(vector<int>& nums, int k) {
+        unordered_set<int> st;
+        for (int x : nums) {
+            if (x < k) {
+                return -1;
+            } else if (x > k) {
+                st.insert(x);
+            }
+        }
+        return st.size();
     }
 };
 ```
