--- a/algorithm/LeetCode/[Easy] 3396. Minimum Number of Operations to Make Elements in Array Distinct.md
+++ b/algorithm/LeetCode/[Easy] 3396. Minimum Number of Operations to Make Elements in Array Distinct.md
@@ -53,7 +53,45 @@ The array already contains distinct elements. Therefore, the answer is 0.
 
 # Submissions
 ---
-**Solution 1: (rigth to left)**
+**Solution 1: (Brute Force)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 27.50 MB, Beats 77.30%
+```
+```c++
+class Solution {
+public:
+    int minimumOperations(vector<int>& nums) {
+        int n = nums.size(), i, j, cnt[101] = {0}, ans = 0;
+        bool flag;
+        for (i = 0; i < n; i ++) {
+            cnt[nums[i]] += 1;
+        }
+        i = 0;
+        while (i < n) {
+            flag = true;
+            for (j = 1; j <= 100; j ++) {
+                if (cnt[j] > 1) {
+                    flag = false;
+                    break;
+                }
+            }
+            if (flag) {
+                return ans;
+            }
+            j = min(i+3, n);
+            while (i < j) {
+                cnt[nums[i]] -= 1;
+                i += 1;
+            }
+            ans += 1;
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 2: (rigth to left)**
 ```
 Runtime: 0 ms
 Memory: 27.35 MB
