--- a/algorithm/LeetCode/[Easy] 2843. Count Symmetric Integers.md
+++ b/algorithm/LeetCode/[Easy] 2843. Count Symmetric Integers.md
@@ -47,3 +47,38 @@ class Solution:
                 ans += 1
         return ans
 ```
+
+**Solution 2: (Enumeration)**
+
+case 1: 2 digit
+    11 22 33 44 55 66 77 88 99
+case 2: 4 digit
+    1 2 2 1
+    ^^^ ^^^
+     l   r
+    
+
+```
+Runtime: 4 ms, Beats 91.74%
+Memory: 9.18, MBBeats 100.00%
+````
+```c++
+class Solution {
+public:
+    int countSymmetricIntegers(int low, int high) {
+        int a, left, right, ans = 0;
+        for (a = low; a <= high; ++a) {
+            if (a < 100 && a % 11 == 0) {
+                ans += 1;
+            } else if (1000 <= a && a < 10000) {
+                left = a / 1000 + (a % 1000) / 100;
+                right = (a % 100) / 10 + a % 10;
+                if (left == right) {
+                    ans += 1;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
