update LeetCode Weekly Contest 446

--- a/algorithm/LeetCode/[Easy] 2176. Count Equal and Divisible Pairs in an Array.md
+++ b/algorithm/LeetCode/[Easy] 2176. Count Equal and Divisible Pairs in an Array.md
@@ -49,30 +49,34 @@ class Solution:
 ```
 
 **Solution 2: (Hash Table)**
+
+    nums = [3, 1, 2, 2, 2, 1, 3], k = 2
+                           ^
+    3: [0]
+        ^
+    1: [1 5]
+    2: [2 3]
+        ^ ^
+
+ans  1  3
+
 ```
-Runtime: 10 ms
-Memory Usage: 12.5 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 16.50 MB, Beats 6.09%
 ```
 ```c++
 class Solution {
 public:
     int countPairs(vector<int>& nums, int k) {
-        unordered_map<int, vector<int>> numToIndex;
-        int result=0;
-        for (int i=0;i<nums.size(); i++){
-		// for each index i, match it with previous index that has the same number
-            if (numToIndex.find(nums[i])!=numToIndex.end()){ 
-                for (int pos: numToIndex[nums[i]]){
-                    if ( (pos*i)%k == 0){
-                        result++;
-                    }
-                }
-                numToIndex[nums[i]].push_back(i);
-            }else{
-                numToIndex[nums[i]]={i};            
+        int n = nums.size(), i, ans = 0;
+        vector<vector<int>> dp(101);
+        for (i = 0; i < n; i ++) {
+            for (auto j: dp[nums[i]]) {
+                ans += (i*j)%k == 0;
             }
+            dp[nums[i]].push_back(i);
         }
-        return result;
+        return ans;
     }
 };
 ```
