update LeetCode Biweekly Contest 155

--- a/algorithm/LeetCode/[Easy] 1399. Count Largest Group.md
+++ b/algorithm/LeetCode/[Easy] 1399. Count Largest Group.md
@@ -54,3 +54,33 @@ class Solution:
         
         return sum(v == max_size for v in grp.values())
 ```
+
+**Solution 2: (Brute Force)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 7.71 MB, Beats 98.31%
+```
+```c++
+class Solution {
+public:
+    int countLargestGroup(int n) {
+        int cnt[40] = {0}, a, b, c, mx = 0, ans;
+        for (a = 1; a <= n; a ++) {
+            b = a;
+            c = 0;
+            while (b) {
+                c += b%10;
+                b /= 10;
+            }
+            cnt[c] += 1;
+            if (mx < cnt[c]) {
+                ans = 1;
+                mx = cnt[c];
+            } else if (mx == cnt[c]) {
+                ans += 1;
+            }
+        }
+        return ans;
+    }
+};
+```
