--- a/algorithm/LeetCode/[Hard] 2444. Count Subarrays With Fixed Bounds.md
+++ b/algorithm/LeetCode/[Hard] 2444. Count Subarrays With Fixed Bounds.md
@@ -52,10 +52,54 @@ class Solution:
         return res
 ```
 
-**Solution 2: (Sliding Window)**
+**Solution 2: (Sort, Counter, Sliding Window)**
 ```
-Runtime: 85 ms
-Memory: 82.68 MB
+Runtime: 95 ms, Beats 5.15%
+Memory: 116.90 MB, Beats 5.15%
+```
+```c++
+class Solution {
+public:
+    long long countSubarrays(vector<int>& nums, int minK, int maxK) {
+        int n = nums.size(), b = 0, i = 0, j;
+        long long ans = 0;
+        map<int,int> cnt;
+        for (j = 0; j < n; j ++) {
+            if (nums[j] < minK || nums[j] > maxK) {
+                cnt.clear();
+                b = j + 1;
+                i = b;
+                continue;
+            }
+            cnt[nums[j]] += 1;
+            if (cnt.begin()->first == minK && cnt.rbegin()->first == maxK) {
+                while ((nums[i] != minK && nums[i] != maxK) || (cnt[nums[i]] > 1)) {
+                    cnt[nums[i]] -= 1;
+                    if (cnt[nums[i]] == 0) {
+                        cnt.erase(nums[i]);
+                    }
+                    i += 1;
+                }
+                ans += i-b+1;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Sliding Window)**
+
+    nums = [1, 3, 5, 2, 7, 5], minK = 1, maxK = 5
+i           ^
+j                    ^
+imin        ^
+imax             ^
+ans              1   2
+
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 93.87 MB, Beats 62.97%
 ```
 ```c++
 class Solution {
