--- a/algorithm/LeetCode/[Easy] 3392. Count Subarrays of Length Three With a Condition.md
+++ b/algorithm/LeetCode/[Easy] 3392. Count Subarrays of Length Three With a Condition.md
@@ -38,12 +38,18 @@ Explanation:
 ---
 **Solution 1: (Greedy)**
 ```
+Runtime: 0 ms, Beats 100.00%
+Memory: 48.29 MB, Beats 95.92%
+```
+```c++
 class Solution {
 public:
     int countSubarrays(vector<int>& nums) {
-        int ans = 0;
-        for (int i = 1; i < nums.size()-1; i ++) {
-            ans += nums[i] == 2*(nums[i-1] + nums[i+1]);
+        int n = nums.size(), i, ans = 0;
+        for (i = 2; i < n; i ++) {
+            if ((nums[i] + nums[i-2])*2 == nums[i-1]) {
+                ans += 1;
+            }
         }
         return ans;
     }
