update LeetCode Weekly Contest 448

--- a/algorithm/LeetCode/[Easy] 1128. Number of Equivalent Domino Pairs.md
+++ b/algorithm/LeetCode/[Easy] 1128. Number of Equivalent Domino Pairs.md
@@ -61,3 +61,24 @@ class Solution:
                 
         return ans
 ```
+
+**Solution 3: (Hash Table)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 26.23 MB, Beats 48.50%
+```
+```c++
+class Solution {
+public:
+    int numEquivDominoPairs(vector<vector<int>>& dominoes) {
+        vector<int> num(100);
+        int a, ans = 0;
+        for (auto& d : dominoes) {
+            a = d[0] < d[1] ? d[0] * 10 + d[1] : d[1] * 10 + d[0];
+            ans += num[a];
+            num[a] += 1;
+        }
+        return ans;
+    }
+};
+```
