--- a/algorithm/LeetCode/[Hard] 2302. Count Subarrays With Score Less Than K.md
+++ b/algorithm/LeetCode/[Hard] 2302. Count Subarrays With Score Less Than K.md
@@ -62,22 +62,89 @@ class Solution:
 ```
 
 **SOlution 2: (Sliding Window)**
+
+    (a+x)*(n+1)
+    = a*n + a + x*(n+1)
+
+    (a-x)*(n-1)
+    = a*n - a - x*(n-1)
+
+    nums = [2,  1,  4,  3,  5], k = 10
+                    ^j
+                    ^i
+cur         2   6  21
+                   10
+                    4   14
+                         3
+a        0  2   3   0
+ck          1   2   1    1   1
+ans         1   3   4    5   6
+            ^   
+                ^
+                    ^
+                        ^
+                            ^
+            ^^^^^
+
 ```
-Runtime: 259 ms
-Memory Usage: 95 MB
+Runtime: 3 ms, Beats 61.20%
+Memory: 99.00 MB, Beats 76.24%
 ```
 ```c++
 class Solution {
 public:
     long long countSubarrays(vector<int>& nums, long long k) {
-        long long res = 0, cur = 0;
-        for (int j = 0, i = 0; j < nums.size(); ++j) {
-            cur += nums[j];
-            while (cur * (j - i + 1) >= k)
-                cur -= nums[i++];
-            res += j - i + 1;
+        int n = nums.size(), i = 0, j = 0;
+        long long a = 0, ck = 0, cur = 0, ans = 0;
+        for (j = 0; j < n; j ++) {
+            ck += 1;
+            cur = cur + a + nums[j]*ck;
+            a += nums[j];
+            while (cur >= k) {
+                cur = cur - a - nums[i]*(ck - 1);
+                a -= nums[i];
+                ck -= 1;
+                i += 1;
+            }
+            ans += ck;
         }
-        return res;
+        return ans;
+    }
+};
+```
+
+
+**SOlution 3: (Sliding Window)
+
+    x x2 x3 x4 x5 x6
+    ^i         ^j
+      ^i
+    -------------
+       a*(j-i+1)
+    ---------------
+    (a+x6)*(j-i+1)
+      -----------
+      (a-x)(j-i+1)
+
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 99.12 MB, Beats 14.11%
+```
+```c++
+class Solution {
+public:
+    long long countSubarrays(vector<int>& nums, long long k) {
+        int n = nums.size(), i = 0, j = 0;
+        long long a = 0, cur = 0, ans = 0;
+        for (j = 0; j < n; j ++) {
+            a += nums[j];
+            while (a*(j-i+1) >= k) {
+                a -= nums[i];
+                i += 1;
+            }
+            ans += j - i + 1;
+        }
+        return ans;
     }
 };
 ```
