--- a/algorithm/LeetCode/[Easy] 1295. Find Numbers with Even Number of Digits.md
+++ b/algorithm/LeetCode/[Easy] 1295. Find Numbers with Even Number of Digits.md
@@ -41,3 +41,23 @@ class Solution:
     def findNumbers(self, nums: List[int]) -> int:
         return sum(len(str(n)) % 2 == 0 for n in nums)
 ```
+
+**Solution 2: (Math)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 13.28 MB, Beats 90.57%
+```
+```c++
+class Solution {
+public:
+    int findNumbers(vector<int>& nums) {
+        int ans = 0;
+        for (auto num: nums) {
+            if ((num >= 10 && num <= 99) || (num >= 1000 && num <= 9999) || num == 100000) {
+                ans += 1;
+            }
+        }
+        return ans;
+    }
+};
+```
