update LeetCode Biweekly Contest 156

--- a/algorithm/LeetCode/[Easy] 1920. Build Array from Permutation.md
+++ b/algorithm/LeetCode/[Easy] 1920. Build Array from Permutation.md
@@ -44,3 +44,22 @@ class Solution:
     def buildArray(self, nums: List[int]) -> List[int]:
         return [nums[nums[i]] for i in range(len(nums))]
 ```
+
+**Solution 2: (Array)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 20.48 MB, Beats 58.11%
+```
+```c++
+class Solution {
+public:
+    vector<int> buildArray(vector<int>& nums) {
+        int n = nums.size(), i;
+        vector<int> ans(n);
+        for (i = 0; i < n; i ++) {
+            ans[i] = nums[nums[i]];
+        }
+        return ans;
+    }
+};
+```
