--- a/algorithm/LeetCode/[Hard] 3343. Count Number of Balanced Permutations.md
+++ b/algorithm/LeetCode/[Hard] 3343. Count Number of Balanced Permutations.md
@@ -88,7 +88,7 @@ Thus, the time and space complexity is O(n ^ 3). The comb values can be pre-comp
 Runtime: 1202 ms
 Memory: 98.78 MB
 ```
-```c++
+```python
 class Solution:
     def countBalancedPermutations(self, num: str) -> int:
         cnt = Counter(int(ch) for ch in num)
@@ -106,4 +106,88 @@ class Solution:
             return res % 1000000007
 
         return 0 if total % 2 else dfs(9, len(num) - len(num) // 2, len(num) // 2, total // 2)
+```
+
+**Solution 2: (DP Bottom-Up, O(n^2 * S), S = 10*n/2)**
+
+comb 
+        0   1   2   3   4
+    0   1
+    1   1   1
+    2   1       1
+    3   1   3   3   1
+    4   1       6       1
+
+
+    dp[cur][oddCnt] = dp[i*j][j] * dp[cur - i*j][oddCnt - j]
+                      ^^^^^^^^^^
+          comb[oddCnt][j] * comb[evenCnt][cnt[i] - j]
+          ^^^^^^^^^^^^^^^   ^^^^^^^^^^^^^^^^^^^^^^^^^
+                odd               even
+
+```
+Runtime: 95 ms, Beats 93.10%
+Memory: 21.42 MB, Beats 73.56%
+```
+```c++
+class Solution {
+    constexpr static long long MOD = 1e9 + 7;
+public:
+    int countBalancedPermutations(string num) {
+        int tot = 0, n = num.size();
+        vector<int> cnt(10);
+        for (char ch : num) {
+            int d = ch - '0';
+            cnt[d]++;
+            tot += d;
+        }
+        if (tot % 2 != 0) {
+            return 0;
+        }
+
+        int target = tot / 2;
+        int maxOdd = (n + 1) / 2;
+        vector<vector<long long>> comb(maxOdd + 1,
+                                       vector<long long>(maxOdd + 1));
+        vector<vector<long long>> f(target + 1, vector<long long>(maxOdd + 1));
+        for (int i = 0; i <= maxOdd; i++) {
+            comb[i][i] = comb[i][0] = 1;
+            for (int j = 1; j < i; j++) {
+                comb[i][j] = (comb[i - 1][j] + comb[i - 1][j - 1]) % MOD;
+            }
+        }
+
+        f[0][0] = 1;
+        int psum = 0, totSum = 0;
+        for (int i = 0; i <= 9; i++) {
+            /* Sum of the number of the first i digits */
+            psum += cnt[i];
+            /* Sum of the first i numbers */
+            totSum += i * cnt[i];
+            for (int oddCnt = min(psum, maxOdd);
+                 oddCnt >= max(0, psum - (n - maxOdd)); oddCnt--) {
+                /* The number of bits that need to be filled in even numbered
+                 * positions */
+                int evenCnt = psum - oddCnt;
+                for (int curr = min(totSum, target);
+                     curr >= max(0, totSum - target); curr--) {
+                    long long res = 0;
+                    for (int j = max(0, cnt[i] - evenCnt);
+                         j <= min(cnt[i], oddCnt) && i * j <= curr; j++) {
+                        /* The current digit is filled with j positions at odd
+                         * positions, and cnt[i] - j positions at even positions
+                         */
+                        long long ways =
+                            comb[oddCnt][j] * comb[evenCnt][cnt[i] - j] % MOD;
+                        res = (res + ways * f[curr - i * j][oddCnt - j] % MOD) %
+                              MOD;
+                    }
+                    f[curr][oddCnt] = res % MOD;
+                }
+            }
+        }
+
+        return f[target][maxOdd];
+    }
+};
 ```
