update LeetCode Weekly Contest 450

--- a/algorithm/LeetCode/[Hard] 1606. Find Servers That Handled Most Number of Requests.md
+++ b/algorithm/LeetCode/[Hard] 1606. Find Servers That Handled Most Number of Requests.md
@@ -105,3 +105,100 @@ class Solution:
         maxreqs = max(requests_handled)
         return [i for i, handled in enumerate(requests_handled) if handled == maxreqs]
 ```
+
+**Solution 2: (Heap, Set)**
+
+drop             xxxxxxxxx
+s2         ---------
+s1      ----- ---------       <
+s0   ----------------
+     1  2  3  4  5  6  7  8
+st               ^
+     0,1,2
+     x x x
+         ^
+pq
+                    0
+              1
+                    2
+cnt
+0    1
+1       1     2
+2          1
+
+s2         ---
+s1      ------   
+s0   ---      ------          <
+     1  2  3  4  5  6  7  8
+              ^
+st
+    (0,1,2)
+     x  
+pq
+        0     1    0
+              2
+
+cnt
+s2         1
+s1      1
+s0   1        2
+
+s2         -------------------------------------        <
+s1      ----------------------------------------        <
+s0   -------------------------------                    <
+     1  2  3  4  5  6  7  8  9  10  11  12  13  14
+           ^
+st
+   0,1,2
+       ^
+pq
+                                    0
+                                                 1
+                                                 2
+
+```
+Runtime: 128 ms, Beats 83.80%
+Memory: 123.32 MB, Beats 35.73%
+```
+```c++
+class Solution {
+public:
+    vector<int> busiestServers(int k, vector<int>& arrival, vector<int>& load) {
+        int n = arrival.size(), i, a, mx = 0;
+        set<int> st;
+        priority_queue<pair<int,int>, vector<pair<int,int>>, greater<>> pq;
+        vector<int> cnt(k), ans;
+        for (i = 0; i < k; i ++) {
+            st.insert(i);
+        }
+        for (i = 0; i < n; i ++) {
+            while (pq.size() && pq.top().first <= arrival[i]) {
+                st.insert(pq.top().second);
+                pq.pop();
+            }
+            auto it = st.lower_bound(i%k);
+            if (it == st.end()) {
+                if (st.size()) {
+                    a = *st.begin();
+                } else {
+                    continue;
+                }
+            } else {
+                a = *it;
+            }
+            st.erase(a);
+            cnt[a] += 1;
+            pq.push({arrival[i] + load[i], a});
+        }
+        for (i = 0; i < k; i ++) {
+            if (cnt[i] > mx) {
+                mx = cnt[i];
+                ans = {i};
+            } else if (cnt[i] == mx) {
+                ans.push_back(i);
+            }
+        }
+        return ans;
+    }
+};
+```
