--- a/algorithm/LeetCode/[Easy] 2094. Finding 3-Digit Even Numbers.md
+++ b/algorithm/LeetCode/[Easy] 2094. Finding 3-Digit Even Numbers.md
@@ -63,3 +63,83 @@ class Solution:
                 ans.add(v)
         return sorted(ans)
 ```
+
+**Solution 2: (Brute Force)**
+```
+Runtime: 237 ms, Beats 25.34%
+Memory: 13.77 MB, Beats 56.14%
+```
+```c++
+class Solution {
+public:
+    vector<int> findEvenNumbers(vector<int>& digits) {
+        unordered_set<int> nums;  // Target even set
+        int n = digits.size();
+        // Traverse the indices of three digits
+        for (int i = 0; i < n; ++i) {
+            for (int j = 0; j < n; ++j) {
+                for (int k = 0; k < n; ++k) {
+                    // Determine whether it meets the condition of the target
+                    // even number
+                    if (i == j || j == k || i == k) {
+                        continue;
+                    }
+                    int num = digits[i] * 100 + digits[j] * 10 + digits[k];
+                    if (num >= 100 && num % 2 == 0) {
+                        nums.insert(num);
+                    }
+                }
+            }
+        }
+        // Converted to an array sorted in ascending order
+        vector<int> res;
+        for (const int num : nums) {
+            res.push_back(num);
+        }
+        sort(res.begin(), res.end());
+        return res;
+    }
+};
+```
+
+**Solution 3: (Backtracking)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 12.20 MB, Beats 99.40%
+```
+```c++
+class Solution {
+    void bt(int cur, vector<int> &cnt, vector<int> &ans) {
+        if (cur >= 100) {
+            if (cur%2 == 0) {
+                ans.push_back(cur);
+            }
+            return;
+        }
+        for (int i = 0; i <= 9; i ++) {
+            if (cnt[i]) {
+                cnt[i] -= 1;
+                bt(cur*10 + i, cnt, ans);
+                cnt[i] += 1;
+            }
+        }
+    }
+public:
+    vector<int> findEvenNumbers(vector<int>& digits) {
+        int i;
+        vector<int> cnt(10);
+        for (int d: digits) {
+            cnt[d] += 1;
+        }
+        vector<int> ans;
+        for (i = 1; i <= 9; i ++) {
+            if (cnt[i]) {
+                cnt[i] -= 1;
+                bt(i, cnt, ans);
+                cnt[i] += 1;
+            }
+        }
+        return ans;
+    }
+};
+```
