--- a/algorithm/LeetCode/[Hard] 1931. Painting a Grid With Three Different Colors.md
+++ b/algorithm/LeetCode/[Hard] 1931. Painting a Grid With Three Different Colors.md
@@ -107,3 +107,140 @@ class Solution:
 
         return sum(f(state, n - 1) for state in states) % mod
 ```
+
+**Solution 2: (DP Bottom-Up, O(3^{2m} * n))**
+
+           --------------n------------
+  | 0/1/2 [                           ]
+  m 0/1/2 [                           ]
+  |                    ...
+  | 0/1/2 [                           ]
+                 ^si ^si+1
+                 pre dp
+                     ^si+1 ^si+2
+                     pre   dp
+
+m = 1
+       n = 1 | n = 2  -> 6
+             | 0 1 2
+     0   1   |   1 1 
+     1   1   | 1   1
+     2   1   | 1 1
+         3
+
+m = 2:
+       n = 1 | n = 2            -> 18  | n = 3                -> 54
+             | 01 02 10 12 20 21       |    01 02 10 12 20 21 
+    00x      |                         | 
+    01   1   |           1  1  1       |              3  3  3
+    02   1   |        1     1  1       |           3     3  3
+    10   1   |  1  1           1       |     3  3           3
+    11x      |                         |
+    12   1   |  1           1  1       |     3           3  3
+    20   1   |  1  1     1             |     3  3     3 
+    21   1   |     1  1  1             |        3  3  3   
+    22x      | 
+         6
+m = 3: 
+      n = 1 | n = 2                                           -> 54
+            | 010 012 020 021 101 102 120 121 201 202 210 212
+   000x     |
+   001x     |
+   002x     |
+   010   1  |                    1   1       1   1   1
+   011x     |
+   012   1  |                    1       1   1   1
+   020   1  |                    1   1           1   1       1
+   021   1  |                        1               1   1   1
+   022x     |
+   100x     |
+   101   1  |
+   102   1  |
+   110x     |
+   111x     |
+   112x     |
+   120   1  |
+   121   1  |
+   122x     |
+   200x     |
+   201   1  |
+   202   1  |
+   210   1  |
+   211x     |
+   212   1  |
+   220x     |
+   221x     |
+   222x     |
+        12
+
+```
+Runtime: 39 ms, Beats 75.86%
+Memory: 19.73 MB, Beats 37.36%
+```
+```c++
+class Solution {
+    static constexpr int MOD = 1e9 + 7;
+public:
+    int colorTheGrid(int m, int n) {
+        unordered_map<int, vector<int>> valid;
+
+        int mask_end = pow(3, m);
+        for (int mask = 0; mask < mask_end; ++mask) {
+            vector<int> color;
+            int mm = mask;
+            for (int i = 0; i < m; ++i) {
+                color.push_back(mm % 3);
+                mm /= 3;
+            }
+            bool check = true;
+            for (int i = 0; i < m - 1; ++i) {
+                if (color[i] == color[i + 1]) {
+                    check = false;
+                    break;
+                }
+            }
+            if (check) {
+                valid[mask] = move(color);
+            }
+        }
+
+        unordered_map<int, vector<int>> g;
+        for (const auto& [mask1, color1] : valid) {
+            for (const auto& [mask2, color2] : valid) {
+                bool check = true;
+                for (int i = 0; i < m; ++i) {
+                    if (color1[i] == color2[i]) {
+                        check = false;
+                        break;
+                    }
+                }
+                if (check) {
+                    g[mask1].push_back(mask2);
+                }
+            }
+        }
+
+        vector<int> pre(mask_end);
+        for (const auto& [mask, _] : valid) {
+            pre[mask] = 1;
+        }
+        for (int i = 1; i < n; ++i) {
+            vector<int> dp(mask_end);
+            for (const auto& [mask2, _] : valid) {
+                for (int mask1 : g[mask2]) {
+                    dp[mask2] += pre[mask1];
+                    dp[mask2] %= MOD;
+                }
+            }
+            pre = move(dp);
+        }
+
+        int ans = 0;
+        for (int num : pre) {
+            ans += num;
+            ans %= MOD;
+        }
+        return ans;
+    }
+};
+```
