update LeetCode Biweekly Contest 157

--- a/algorithm/LeetCode/[Easy] 2942. Find Words Containing Character.md
+++ b/algorithm/LeetCode/[Easy] 2942. Find Words Containing Character.md
@@ -38,17 +38,18 @@ Explanation: "z" does not occur in any of the words. Hence, we return an empty a
 ---
 **Solution 1: (Brute Force)**
 ```
-Runtime: 7 ms
-Memory: 29.2 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 33.15 MB, Beats 28.80%
 ```
 ```c++
 class Solution {
 public:
     vector<int> findWordsContaining(vector<string>& words, char x) {
+        int n = words.size(), i;
         vector<int> ans;
-        for (int i = 0; i < words.size(); i ++) {
-            for (int j = 0; j < words[i].size(); j ++) {
-                if (words[i][j] == x) {
+        for (i = 0; i < n; i ++) {
+            for (auto &c: words[i]) {
+                if (c == x) {
                     ans.push_back(i);
                     break;
                 }
