--- a/algorithm/LeetCode/[Hard] 1857. Largest Color Value in a Directed Graph.md
+++ b/algorithm/LeetCode/[Hard] 1857. Largest Color Value in a Directed Graph.md
@@ -115,3 +115,53 @@ public:
     }
 };
 ```
+
+**Solution 3: (Topological sort)**
+```
+Runtime: 372 ms, Beats 62.06%
+Memory: 174.88 MB, Beats 51.32%
+```
+```c++
+class Solution {
+public:
+    int largestPathValue(string colors, vector<vector<int>>& edges) {
+        int n = colors.size(), m = edges.size(), i, k = 0, ans = -1;
+        vector<vector<int>> g(n);
+        vector<vector<int>> cnt(n, vector<int>(26));
+        vector<int> outdeg(n);
+        for (i = 0; i < m; i ++) {
+            g[edges[i][1]].push_back(edges[i][0]);
+            outdeg[edges[i][0]] += 1;
+        }
+        for (i = 0; i < n; i ++) {
+            cnt[i][colors[i]-'a'] += 1;
+        }
+        queue<int> q;
+        for (i = 0; i < n; i ++) {
+            if (outdeg[i] == 0) {
+                q.push(i);
+                ans = 1;
+            }
+        }
+        while (q.size()) {
+            auto u = q.front();
+            q.pop();
+            k += 1;
+            for (auto v: g[u]) {
+                for (i = 0; i < 26; i ++) {
+                    cnt[v][i] = max(cnt[v][i], cnt[u][i] + (colors[v]-'a' == i));
+                    ans = max(ans, cnt[v][i]);
+                    
+                }
+                outdeg[v] -= 1;
+                if (outdeg[v] == 0) {
+                    q.push(v);
+                }
+            }
+        }
+
+        // check for cycle
+        return k == n ? ans : -1;
+    }
+};
+```
