--- a/algorithm/LeetCode/[Hard] 2402. Meeting Rooms III.md
+++ b/algorithm/LeetCode/[Hard] 2402. Meeting Rooms III.md
@@ -133,3 +133,51 @@ public:
 };
 ```
 
+**Solution 3: (Sort, Heap)**
+
+1      ----------- -------------- 
+0   ----------------------------- --
+    0  1  2  3  4  5  6  7  8  9  10 11
+                   ^
+    (0,0)x                        (10,0)x
+    (0,1)                         (10,1)
+       (1,1)x     (5,1)x
+
+```
+Runtime: 76 ms, Beats 62.34%
+Memory: 97.98 MB, Beats 99.30%
+```
+```c++
+class Solution {
+public:
+    int mostBooked(int n, vector<vector<int>>& meetings) {
+        int m = meetings.size(), i, st, ed, ans, mx = 0;
+        sort(meetings.begin(), meetings.end());
+        vector<int> cnt(n);
+        priority_queue<pair<long long,int>, vector<pair<long long,int>>, greater<>> pq;
+        for (i = 0; i < n; i ++) {
+            pq.push({0, i});
+        }
+        for (i = 0; i < m; i ++) {
+            st = meetings[i][0];
+            ed = meetings[i][1];
+            while (pq.top().first < st) {
+                auto [t, j] = pq.top();
+                pq.pop();
+                pq.push({st, j});
+            } 
+            auto [t, j] = pq.top();
+            pq.pop();
+            cnt[j] += 1;
+            pq.push({t + ed-st, j});
+        }
+        for (i = 0; i < n; i ++) {
+            if (cnt[i] > mx) {
+                mx = cnt[i];
+                ans = i;
+            }
+        }
+        return ans;
+    }
+};
+```
