--- a/algorithm/LeetCode/[Hard] 3123. Find Edges in Shortest Paths.md
+++ b/algorithm/LeetCode/[Hard] 3123. Find Edges in Shortest Paths.md
@@ -96,3 +96,63 @@ public:
     }
 };
 ```
+
+**Solution 2: (Dijkstra, backtracking)**
+```
+Runtime: 668 ms, Beats 27.01%
+Memory: 202.32 MB, Beats 57.57%
+```
+```c++
+class Solution {
+public:
+    vector<bool> findAnswer(int n, vector<vector<int>>& edges) {
+        int m = edges.size(), i;
+        vector<vector<tuple<int,int,int>>> g(n);
+        for (i = 0; i < m; i ++) {
+            g[edges[i][0]].push_back({edges[i][1], edges[i][2], i});
+            g[edges[i][1]].push_back({edges[i][0], edges[i][2], i});
+        }
+        priority_queue<pair<int,int>, vector<pair<int,int>>, greater<pair<int,int>>> pq;
+        vector<pair<int,vector<pair<int,int>>>> dist(n, {INT_MAX, {}});
+        vector<bool> ans(m);
+        pq.push({0, 0});
+        dist[0] = {0, {{-1,-1}}};
+        while (pq.size()) {
+            auto [w, u] = pq.top();
+            pq.pop();
+            if (w > dist[n-1].first) {
+                break;
+            }
+            for (auto [v, dw, j]: g[u]) {
+                if (dist[v].first > w + dw) {
+                    dist[v].first = w + dw;
+                    dist[v].second = {{u, j}};
+                    pq.push({w + dw, v});
+                } else if (dist[v].first == w + dw) {
+                    dist[v].second.push_back({u, j});
+                    pq.push({w + dw, v});
+                }
+            }
+        }
+        queue<int> q;
+        for (auto [u, j]: dist[n-1].second) {
+            ans[j] = true;
+            q.push(u);
+        }
+        while (q.size()) {
+            auto u = q.front();
+            q.pop();
+            if (u == 0) {
+                continue;
+            }
+            for (auto [v, j]: dist[u].second) {
+                if (!ans[j]) {
+                    ans[j] = true;
+                    q.push(v);
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
