--- a/algorithm/LeetCode/[Easy] 3024. Type of Triangle II.md
+++ b/algorithm/LeetCode/[Easy] 3024. Type of Triangle II.md
@@ -36,7 +36,7 @@ As all the sides are of different lengths, it will form a scalene triangle.
 
 # Submissions
 ---
-**Solution 1: ()**
+**Solution 1: (Sort)**
 ```
 Runtime 9ms
 Memory: 22.02 MB
