--- a/algorithm/LeetCode/[Hard] 1906. Minimum Absolute Difference Queries.md
+++ b/algorithm/LeetCode/[Hard] 1906. Minimum Absolute Difference Queries.md
@@ -99,6 +99,15 @@ public:
 ```
 
 **Solution 2: (Binary Search)**
+
+    nums = [4,5,2,2,7,10], queries = [[2,3],[0,2],[0,5],[3,5]]
+
+
+    3
+    2 0 1 4  5
+   ------------
+    2 4 5 7 10
+
 ```
 Runtime: 359 ms
 Memory: 91.03 MB
