--- a/algorithm/LeetCode/[Easy] 2894. Divisible and Non-divisible Sums Difference.md
+++ b/algorithm/LeetCode/[Easy] 2894. Divisible and Non-divisible Sums Difference.md
@@ -49,14 +49,15 @@ We return 0 - 15 = -15 as the answer.
 ---
 **Solution 1: (Math)**
 ```
-Runtime: 0 ms
-Memory: 6.5 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.47 MB, Beats 36.04%
 ```
 ```c++
 class Solution {
 public:
     int differenceOfSums(int n, int m) {
-        return (1 + n) * n / 2 - (1 + n / m) * (n / m) * m;
+        int k = n / m;
+        return n * (n + 1) / 2 - k * (k + 1) * m;
     }
 };
 ```
