update LeetCode Weekly Contest 452

--- a/algorithm/LeetCode/[Hard] 3373. Maximize the Number of Target Nodes After Connecting Trees II.md
+++ b/algorithm/LeetCode/[Hard] 3373. Maximize the Number of Target Nodes After Connecting Trees II.md
@@ -147,3 +147,68 @@ public:
     }
 };
 ```
+
+**Solution 3: (BFS)**
+```
+Runtime: 317 ms, Beats 64.63%
+Memory: 335.35 MB, Beats 90.48%
+```
+```c++
+class Solution {
+    void bfs(vector<vector<int>> &g, int k, vector<int> &cnt, bool is_ans = false) {
+        int sz, j, a = 0, b = 0;
+        queue<pair<int,int>> q;
+        q.push({0, -1});
+        while (q.size()) {
+            sz = q.size();
+            if (k%2 == 0) {
+                a += sz;
+            } else {
+                b += sz;
+            }
+            for (j = 0; j < sz; j ++) {
+                auto [u, p] = q.front();
+                q.pop();
+                if (is_ans) {
+                    cnt[u] = k%2 == 0 ? 0 : 1;
+                }
+                for (auto v: g[u]) {
+                    if (v != p) {
+                        q.push({v, u});
+                    }
+                }
+            }
+            k ^= 1;
+        }
+        if (is_ans) {
+            for (j = 0; j < g.size(); j ++) {
+                cnt[j] = cnt[j] == 0 ? a : b;
+            }
+        } else {
+            cnt[0] = a;
+            cnt[1] = b;
+        }
+    }
+public:
+    vector<int> maxTargetNodes(vector<vector<int>>& edges1, vector<vector<int>>& edges2) {
+        int n = edges1.size()+1, m = edges2.size()+1, i, a;
+        vector<vector<int>> gn(n), gm(m);
+        vector<int> ans(n), dp(2);
+        for (i = 0; i < n-1; i ++) {
+            gn[edges1[i][0]].push_back(edges1[i][1]);
+            gn[edges1[i][1]].push_back(edges1[i][0]);
+        }
+        for (i = 0; i < m-1; i ++) {
+            gm[edges2[i][0]].push_back(edges2[i][1]);
+            gm[edges2[i][1]].push_back(edges2[i][0]);
+        }
+        bfs(gn, 0, ans, true);
+        bfs(gm, 1, dp);
+        for (i = 0; i < n; i ++) {
+            ans[i] += max(dp[0], dp[1]);
+        }
+        
+        return ans;
+    }
+};
+```
