update LeetCode Biweekly Contest 158

--- a/algorithm/LeetCode/[Hard] 1298. Maximum Candies You Can Get from Boxes.md
+++ b/algorithm/LeetCode/[Hard] 1298. Maximum Candies You Can Get from Boxes.md
@@ -100,3 +100,112 @@ class Solution:
 
         return sum(candies[i] for i in traveled if status[i] == 1 or i in foundKeys) # gather all candies from reachable boxes that are open already, or can be opened with a key
 ```
+
+**Solution 2: (BFS)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 44.16 MB, Beats 66.83%
+```
+```c++
+class Solution {
+public:
+    int maxCandies(vector<int>& status, vector<int>& candies, vector<vector<int>>& keys, vector<vector<int>>& containedBoxes, vector<int>& initialBoxes) {
+        int n = status.size();
+        vector<bool> can_open(n), has_box(n), used(n);
+        for (int i = 0; i < n; ++i) {
+            can_open[i] = (status[i] == 1);  // can_open = status = keys
+        }
+
+        queue<int> q;
+        int ans = 0;
+        for (int box : initialBoxes) {
+            has_box[box] = true;  // has_box = initialBoxes = containedBoxes
+            if (can_open[box]) {
+                q.push(box);
+                used[box] = true;
+                ans += candies[box];
+            }
+        }
+
+        while (!q.empty()) {
+            int big_box = q.front();
+            q.pop();
+            for (int key : keys[big_box]) {
+                can_open[key] = true;
+                if (!used[key] && has_box[key]) {
+                    q.push(key);
+                    used[key] = true;
+                    ans += candies[key];
+                }
+            }
+            for (int box : containedBoxes[big_box]) {
+                has_box[box] = true;
+                if (!used[box] && can_open[box]) {
+                    q.push(box);
+                    used[box] = true;
+                    ans += candies[box];
+                }
+            }
+        }
+
+        return ans;
+    }
+};
+```
+
+**Solution 3: (BFS)**
+
+visited[i] = 0b x x x
+                    ^box = initialbox
+                  ^status = key
+                ^visited
+
+```
+Runtime: 2 ms, Beats 72.60%
+Memory: 44.38 MB, Beats 60.58%
+```
+```c++
+class Solution {
+public:
+    int maxCandies(vector<int>& status, vector<int>& candies, vector<vector<int>>& keys, vector<vector<int>>& containedBoxes, vector<int>& initialBoxes) {
+        int n = status.size(), i, ans = 0;
+        vector<int> visited(n);
+        queue<int> q;
+        for (i = 0; i < n; i ++) {
+            if (status[i]) {
+                visited[i] = 2;
+            }
+        }
+        for (auto b: initialBoxes) {
+            visited[b] |= 1;
+            if (visited[b]&2) {
+                q.push(b);
+                visited[b] |= 4;
+                ans += candies[b];
+            }
+        }
+        while (q.size()) {
+            auto b = q.front();
+            q.pop();
+            for (auto k: keys[b]) {
+                visited[k] |= 2;
+                if ((visited[k]&4) == 0 && (visited[k]&1)) {
+                    q.push(k);
+                    visited[k] |= 4;
+                    ans += candies[k];
+                }
+            }
+            for (auto nb: containedBoxes[b]) {
+                visited[nb] |= 1;
+                if ((visited[nb]&4) == 0 && (visited[nb]&2)) {
+                    q.push(nb);
+                    visited[nb] |= 4;
+                    ans += candies[nb];
+                }
+            }
+
+        }
+        return ans;
+    }
+};
+```
